--- a/EX002/style.css
+++ b/EX002/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, #ff2d6d, #6c5ce7);
+  background: #121212;
 }
 .container {
   text-align: center;
