--- a/EX001/style.css
+++ b/EX001/style.css
@@ -4,13 +4,13 @@ html, body{
     font-family: Arial, Helvetica, sans-serif;
 }
 body {
-    background: linear-gradient(to right, #ff2d6d, #6c5ce7);
+    background-color: #121212;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .card {
-    background: #FFFFFF;
+    background: #2A2A2A;
     padding: 20px;
     border-radius: 12px;
     width: 320px;
@@ -26,9 +26,11 @@ body {
     width: 80%;
     padding: 10px;
     margin: 8px 0;
-    border: 1px solid #ddd;
+    border: 1px solid #444;
     border-radius: 8px;
     font-size: 14px;
+    background-color: #2A2A2A;
+    color: #ff2d6d;
 }
 .card button {
     width: 80%;
@@ -36,22 +38,21 @@ body {
     border: 0;
     border-radius: 5px;
     font-weight: 600;
-    background: #6c5ce7;
+    background: #ff2d6d;
     color: #FFFFFF;
     cursor: pointer;
 }
 .card h2 {
     margin: 0px 0px 15px 0px;
     font-size:30px;
-    color: #0f172a;
+    color: #FFFFFF;
 }
 .card input:focus {
     outline: none;
-    border-color: #2d9cdb;
-    box-shadow: 0 6px 18px rgba(45,156,219,0.12);
+    border-color: #ff2d6d;
 }
 .card input::placeholder {
-    color:#999;
+    color:#888;
 }
 .card button:hover{
   transform: translateY(-2px);
